# pois

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PRD-pois-v0.2.md  mise.toml  opencode.json
.serena/: project.yml
openspec/: config.yaml  project.md
openspec/changes/archive/2026-04-21-bootstrap-pois/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-21-bootstrap-pois/specs/project-foundations/: spec.md
openspec/changes/archive/2026-04-22-align-stack-preferences/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-align-stack-preferences/specs/project-foundations/: spec.md
openspec/changes/archive/2026-04-22-translate-openspec-to-english/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-22-translate-openspec-to-english/specs/project-foundations/: spec.md
openspec/changes/bootstrap-pois/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-pois/specs/project-foundations/: spec.md
openspec/specs/project-foundations/: spec.md
src/: errors.rs  lib.rs  main.rs
src/cli/: gateway.rs  mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/gateway/: auth.rs  health.rs  mod.rs  views.rs
templates/: base.html  index.html
