[package]
name = "pois"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
publish = false
default-run = "pois"

[[bin]]
name = "pois"
path = "src/main.rs"

[lib]
name = "pois"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
askama = "0.14"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal", "time"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
